@startuml

title __ENTITIES's Class Diagram__\n

  namespace entities {
    abstract class entities.Entity {
        {static} + DEFAULT_HEALTH : int
        + x : float
        + y : float
        # active : boolean
        # bounds : Rectangle
        # health : int
        # height : int
        # width : int
        + Entity()
        + checkEntityCollision()
        {abstract} + die()
        + getCollisionBounds()
        + getHeight()
        + getWidth()
        + getX()
        + getY()
        + hurt()
        + isActive()
        {abstract} + render()
        + setHealth()
        + setHeight()
        + setWidth()
        + setX()
        + setY()
        {abstract} + tick()
    }
  }
  

  namespace entities {
    class entities.EntityManager {
        - entities : ArrayList<Entity>
        - renderSort : Comparator<Entity>
        + EntityManager()
        + addEntity()
        + getEntities()
        + getHandler()
        + getPlayer()
        + render()
        + setEntities()
        + setHandler()
        + setPlayer()
        + tick()
    }
  }
  

  entities.Entity o-- tilegame.Handler : handler
  entities.EntityManager o-- tilegame.Handler : handler
  entities.EntityManager o-- creatures.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
